--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="like">like</string>
     <string name="comment">comment</string>
     <string name="share">share</string>
+    <string name="search">Search</string>
 </resources>
